Revert kotlin-dsl plugin JDK16 workaround