@@ -17,7 +17,6 @@
 package org.gradle.kotlin.dsl.plugins.dsl
 
 import org.gradle.api.HasImplicitReceiver
-import org.gradle.api.JavaVersion
 import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.internal.logging.slf4j.ContextAwareTaskLogger
@@ -43,13 +42,6 @@ class KotlinDslCompilerPlugins : Plugin<Project> {
         afterEvaluate {
             kotlinDslPluginOptions {
                 tasks.withType<KotlinCompile>().configureEach {
-                    it.doFirst {
-                        // Workaround until external kotlin-dsl plugins support JDK16 properly
-                        // https://youtrack.jetbrains.com/issue/KT-43704 - should be in 1.5.x line
-                        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
-                            System.setProperty("kotlin.daemon.jvm.options", "--illegal-access=permit")
-                        }
-                    }
                     it.kotlinOptions {
                         jvmTarget = this@kotlinDslPluginOptions.jvmTarget.get()
                         apiVersion = "1.4"
